test/CheckError/Cast/ConstRefMemberVarImplicitDissolve.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int& member) {
	int& getRef() const {
		// Error: member is const here.
		// CHECK: .loci:8:3: error: Can't implicitly cast value of type 'lval<const(const(int_t)&)>(const(value_lval_t<const(const(int_t)&)>))&' to type 'int_t&'.
		return @member;
	}
}

// CHECK: 1 error generated.
